# finstream

./: .env.example  .gitignore  AGENTS.md  BundleCodeBase.ps1  CLAUDE.md  Caddyfile  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  finstream.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/examples/: finnhub_debug.rs  live_test.rs  yahoo_unsubscribe.rs
crates/core/src/: builder.rs  client.rs  config.rs  error.rs  lib.rs  reconnect.rs  types.rs
crates/core/src/providers/: alpaca.rs  finnhub.rs  massive.rs  mod.rs
crates/core/src/providers/yahoo/: mod.rs  proto_handler.rs
crates/napi/: Cargo.toml  package-lock.json  package.json
crates/napi/src/: lib.rs
scripts/: download-bins.ts
src/: ConfigLoader.ts  Logger.ts  NasdaqApi.ts  NasdaqClock.ts  Reception.ts  ServerStarter.ts  TaskMan.ts  Telemetry.ts  YahooStream.ts  events.ts  index.ts  runtime.ts  types.ts
src/utils/: dynamicImport.ts
tests/integration/: engine-flow.test.ts
tests/unit/: NasdaqClock.test.ts  Reception.test.ts  TaskMan.test.ts  Telemetry.test.ts  events.test.ts  runtime.test.ts
