[workspace]
members = [
    "crates/core",
    "crates/bin",
    "crates/napi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors  = ["Costas Kirgoussios"]
license  = "MIT"

[workspace.dependencies]
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util      = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "1"
async-trait       = "0.1"
chrono            = { version = "0.4", features = ["serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand              = "0.8"
url               = "2"
base64            = "0.22"
prost             = "0.12"
axum              = { version = "0.7", features = ["ws"] }
clap              = { version = "4", features = ["derive"] }
config            = { version = "0.14", features = ["toml"] }
dotenvy           = "0.15"
