[package]
name        = "finstream-core"
description = "Unified WebSocket client for financial data providers"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[features]
default = []
alpaca  = []
finnhub = []
massive = []
yahoo   = []

[dependencies]
tokio.workspace             = true
tokio-tungstenite.workspace = true
futures-util.workspace      = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
async-trait.workspace       = true
chrono.workspace            = true
tracing.workspace           = true
rand.workspace              = true
url.workspace               = true
base64.workspace            = true
prost.workspace             = true

[dev-dependencies]
tokio             = { version = "1", features = ["full", "test-util"] }
dotenvy           = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
