[package]
name        = "finstream-napi"
description = "Node.js NAPI bindings for finstream-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["napi/napi4"]

[dependencies]
finstream-core = { path = "../core", features = ["alpaca", "finnhub", "yahoo"] }
tokio.workspace    = true
serde_json.workspace = true

napi        = { version = "2", features = ["async"] }
napi-derive = "2"
